@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Fix a few ::DateMethods1 methods when using a bound date (vs a column)
 
 2.023005  2014-08-10 11:05:27-05:00 America/Chicago
  - Fix ::Row::SelfResultSet to correctly include CSA (Thanks Steve Kleiman!)
